Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-712

Seg fault due to missing NULL return value check of getprotobyname

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.7
    • proton-0.8
    • proton-c

    Description

      There are several places proton-c makes calls to getprotobyname and dereferences the return value without checking for NULL first. Documentation for getprotobyname indicates it can return NULL if there was an error. We have seen seg faults in testing where getprotobyname returned NULL.

      Attached is a patch that adds some simple error checking to the getprotobyname call.

      Attachments

        Activity

          People

            rhs Rafael H. Schloming
            shoda Sahir Hoda
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: