PROTON-712: check getprotobyname for NULL return value (patch from Sahir Hoda)

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1632092 13f79535-47bb-0310-9956-ffa450edef68